<resources>
    <string name="app_name">WeatherReport</string>

    <string name="action_map">Open Location in Map</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="pref_units_label">Units</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_number_of_days_label">Number of days</string>

    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>

    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_number_of_days_key" translatable="false">days</string>

    <string name="pref_units_metric_value" translatable="false">metric</string>
    <string name="pref_units_imperial_value" translatable="false">imperial</string>
    <string name="pref_location_default_value" translatable="false">Zagreb, Croatia</string>
    <string name="pref_number_of_days_default_value" translatable="false">7</string>
</resources>
